public/css/style.css
/* ... */
div#sidebar .content input
{
  width: 99%;
  margin-bottom: 10pt;
  margin-top: 2pt;
  
  border: 1px solid #6D6D6D;
  font-size: 12pt;
}

div#sidebar .content a.avatar img
{
  float: left;
  margin-top: 5pt;
}

div#sidebar .content a.user
{
  background-color: rgba(0, 0, 0, 0.8);
  color: #1cb3ec;
  padding: 5pt;
  width: 93%;
  display: block;
  text-align: center;
  text-decoration: none;
}

div#sidebar .content a.user:hover
{
  color: #FFF;
}

div#sidebar .user .button
{
  float: left;
  margin-top: 5pt;
  margin-left: 5pt;
  width: 52.5%;
}

div#sidebar .user .logout
{
  clear: left;
  width: 52pt;
  text-align: center;
  margin-left: 0pt;
}

div#sidebar .content .search
{
  text-align: center;
  margin: auto;
  display: block;
  width: 95%;
}

div#sidebar .content span.error
{
  float: left;
  width: 100%;
  color: #FF4848;
  text-align: center;
  font-size: 10pt;
  background-color: rgba(0,0,0,0.8);
  padding: 5pt 0pt;
  font-weight: bold;
}


article#content form
{

  border-right: 8px solid rgba(0, 0, 0, 0.2);

  background-color: rgba(255, 255, 255, 0.1);

}


hr
{
  border: 1px solid #3D3D3D;
}

